# chds

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: chdsConfig.cmake.in  install.cmake  version.h.in
examples/: CMakeLists.txt  main.c
include/chds/: chds.h  vec.h  vector.h
tests/: CMakeLists.txt  main.c  test_vec.c  test_vec.h  test_vector.c  test_vector.h
